[package]
name = "dibashblogs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
chrono = "0.4"
log = "0.4"
clap = { version = "4.0.18", features = ["cargo"] }
pulldown-cmark = "0.9.1"
notify = { version = "5.0.0", features = ["serde"] }
